--- a/styles/movies.css
+++ b/styles/movies.css
@@ -119,3 +119,19 @@ dt {
 dd {
 	margin-left: 50px;
 }
+
+.footer-section {
+	height: 50px;
+	width: 794px;
+	background-color: #A2B964;
+	margin-top: 960px;
+	border-bottom-right-radius: 16px;
+	border-bottom-left-radius: 16px;
+}
+
+#paging {
+	vertical-align: middle;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;	
+}
